<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/patient_graph"
    app:startDestination="@id/medListFragment">

    <fragment
        android:id="@+id/medListFragment"
        android:name="com.devoncats.meditrack.presentation.patient.MedListFragment"
        android:label="@string/med_list_title"
        tools:layout="@layout/fragment_med_list">
        <action
            android:id="@+id/action_medList_to_medForm"
            app:destination="@id/medFormFragment" />
        <action
            android:id="@+id/action_medList_to_medDetail"
            app:destination="@id/medDetailFragment" />
        <action
            android:id="@+id/action_medList_to_alert"
            app:destination="@id/alertFragment" />
    </fragment>

    <fragment
        android:id="@+id/medFormFragment"
        android:name="com.devoncats.meditrack.presentation.patient.MedFormFragment"
        android:label="@string/med_form_title"
        tools:layout="@layout/fragment_med_form">
        <argument
            android:name="medicationId"
            app:argType="long"
            android:defaultValue="-1L" />
        <action
            android:id="@+id/action_medForm_to_camera"
            app:destination="@id/cameraFragment" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.devoncats.meditrack.presentation.camera.CameraFragment"
        android:label="@string/camera_title"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/medDetailFragment"
        android:name="com.devoncats.meditrack.presentation.patient.MedDetailFragment"
        android:label="@string/med_detail_title"
        tools:layout="@layout/fragment_med_detail">
        <argument
            android:name="medicationId"
            app:argType="long" />
        <action
            android:id="@+id/action_medDetail_to_medForm"
            app:destination="@id/medFormFragment" />
    </fragment>

    <fragment
        android:id="@+id/alertFragment"
        android:name="com.devoncats.meditrack.presentation.patient.AlertFragment"
        android:label="@string/alert_title"
        tools:layout="@layout/fragment_alert">
        <argument
            android:name="scheduleId"
            app:argType="long" />
        <deepLink app:uri="meditrack://alert/{scheduleId}" />
    </fragment>

</navigation>
